--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <a href="https://ibb.co/zVknG4n8">view image</a>
 
 <img src="gallaxy.jpg" width="500" height="600">
-
+alt="An image of a a valley spanning about a kilometer,with the view of the sky showing the stars in their brightest forrms"
 
 </body>
 </html>
