--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <p>My 10year journey to learning and mastering coding.</p>
 
-<a href="https://ibb.co/zVknG4n8">view image</a>
+<a href="https://ibb.co/zVknG4n8">
+<img src="gallaxy.jpg" alt="i dont know" width="500" height="600">
+</a>
 
-<img src="gallaxy.jpg" alt="An image of a a valley spanning about a kilometer,with the view of the sky showing the stars in their brightest forrms" width="500" height="600">
-alt="An image of a a valley spanning about a kilometer,with the view of the sky showing the stars in their brightest forrms"
-
+<a href="mailto:sethmartey360@gmail.com">Send Email</a>
 </body>
 </html>
